--- a/src/main/resources/aguegu/dotmatrix/DotMatrixTest_zh.properties
+++ b/src/main/resources/aguegu/dotmatrix/DotMatrixTest_zh.properties
@@ -20,10 +20,10 @@ mode=\u5750\u6807\u7CFB
 brightness=\u4EAE\u5EA6
 span=\u5EF6\u65F6
 
-mode_prompt=\u7EDF\u4E00\u5750\u6807\u7CFB:\ (0-2)
-brightness_prompt=\u7EDF\u4E00\u4EAE\u5EA6:\ (0x00-0xff)
-span_prompt=\u7EDF\u4E00\u5EF6\u65F6:\ (0x0000-0xffff)
-#message=\u7531\u53E4\u4F5C\u574A\uFF08http://aguegu.net\uFF09\ \u5723\u6E90\u7535\u5B50\u6DD8\u5B9D\u5E97\uFF08http://syyyd.taobao.com\uFF09\u8054\u5408\u5F00\u53D1
+mode_prompt=\u7EDF\u4E00\u5750\u6807\u7CFB: (0-2)
+brightness_prompt=\u7EDF\u4E00\u4EAE\u5EA6: (0x00-0xff)
+span_prompt=\u7EDF\u4E00\u5EF6\u65F6: (0x0000-0xffff)
+#message=\u7531\u53E4\u4F5C\u574A\uFF08http://aguegu.net\uFF09 \u5723\u6E90\u7535\u5B50\u6DD8\u5B9D\u5E97\uFF08http://syyyd.taobao.com\uFF09\u8054\u5408\u5F00\u53D1
 time_span=\u5EF6\u65F6
 
 upper_led=Led\uFF08\u4E0A\uFF09
@@ -34,20 +34,20 @@ about=\u5173\u4E8E
 loop=\u5FAA\u73AF
 on=\u5168\u5F00
 off=\u5168\u5173
-x+=X\ +
-x-=X\ -
-y+=Y\ +
-y-=Y\ -
-z+=Z\ +
-z-=Z\ -
-3c=R3\ \u987A\u65F6\u9488\u65CB\u8F6C
-3a=R3\ \u9006\u65F6\u9488\u65CB\u8F6C
-2c=R2\ \u987A\u65F6\u9488\u65CB\u8F6C
-2a=R2\ \u9006\u65F6\u9488\u65CB\u8F6C
-1c=R1\ \u987A\u65F6\u9488\u65CB\u8F6C
-1a=R1\ \u9006\u65F6\u9488\u65CB\u8F6C
-0c=R0\ \u987A\u65F6\u9488\u65CB\u8F6C
-0a=R0\ \u9006\u65F6\u9488\u65CB\u8F6C
+x+=X +
+x-=X -
+y+=Y +
+y-=Y -
+z+=Z +
+z-=Z -
+3c=R3 \u987A\u65F6\u9488\u65CB\u8F6C
+3a=R3 \u9006\u65F6\u9488\u65CB\u8F6C
+2c=R2 \u987A\u65F6\u9488\u65CB\u8F6C
+2a=R2 \u9006\u65F6\u9488\u65CB\u8F6C
+1c=R1 \u987A\u65F6\u9488\u65CB\u8F6C
+1a=R1 \u9006\u65F6\u9488\u65CB\u8F6C
+0c=R0 \u987A\u65F6\u9488\u65CB\u8F6C
+0a=R0 \u9006\u65F6\u9488\u65CB\u8F6C
 xf=X\u8F74 \u7FFB\u8F6C
 yf=Y\u8F74 \u7FFB\u8F6C
 zf=Z\u8F74 \u7FFB\u8F6C
