Run IntelliJ Code Inspection and Clean-Up
- also renames entrypoint class `DotMatrixTest` and its resource bundle to `DotMatrixGUI`

--- a/src/main/resources/aguegu/dotmatrix/DotMatrixGUI_zh.properties
+++ b/src/main/resources/aguegu/dotmatrix/DotMatrixGUI_zh.properties
@@ -15,6 +15,8 @@ update=\u66F4\u65B0
 delete=\u5220\u9664
 
 language=\u8BED\u8A00
+english=English
+chinese=Chinese
 
 mode=\u5750\u6807\u7CFB
 brightness=\u4EAE\u5EA6
@@ -23,7 +25,7 @@ span=\u5EF6\u65F6
 mode_prompt=\u7EDF\u4E00\u5750\u6807\u7CFB: (0-2)
 brightness_prompt=\u7EDF\u4E00\u4EAE\u5EA6: (0x00-0xff)
 span_prompt=\u7EDF\u4E00\u5EF6\u65F6: (0x0000-0xffff)
-#message=\u7531\u53E4\u4F5C\u574A\uFF08http://aguegu.net\uFF09 \u5723\u6E90\u7535\u5B50\u6DD8\u5B9D\u5E97\uFF08http://syyyd.taobao.com\uFF09\u8054\u5408\u5F00\u53D1
+message=\u7531\u53E4\u4F5C\u574A\uFF08http://aguegu.net\uFF09 \u5723\u6E90\u7535\u5B50\u6DD8\u5B9D\u5E97\uFF08http://syyyd.taobao.com\uFF09\u8054\u5408\u5F00\u53D1
 time_span=\u5EF6\u65F6
 
 upper_led=Led\uFF08\u4E0A\uFF09
@@ -52,3 +54,13 @@ xf=X\u8F74 \u7FFB\u8F6C
 yf=Y\u8F74 \u7FFB\u8F6C
 zf=Z\u8F74 \u7FFB\u8F6C
 r=\u53CD\u76F8
+
+baud=Baud
+play=Play
+stop=Stop
+comport=Serial port
+open_serial=Open
+close_serial=Close
+delay=Update delay(ms)
+refresh=Refresh
+anim_loop=Loop animation
