--- a/src/main/resources/aguegu/dotmatrix/DotMatrixGUI_de.properties
+++ b/src/main/resources/aguegu/dotmatrix/DotMatrixGUI_de.properties
@@ -17,6 +17,7 @@ delete=Aktuelles Frame löschen
 language=Sprache
 english=Englisch
 chinese=Chinesisch
+german=Deutsch
 
 mode=Modus
 brightness=Helligkeit
@@ -33,7 +34,7 @@ bottom_led=Bottom Led
 
 about=Über uns
 
-loop=Wrap
+loop=Wrappen
 on=Alle LEDs an
 off=Alle LEDs aus
 x+=Um X nach vorne verschieben
@@ -50,9 +51,9 @@ z-=Um Z nach hinten verschieben
 1a=R1 gegen den Uhrseigersinn
 0c=R0 im Uhrzeigersinn
 0a=R0 gegen den Uhrseigersinn
-xf=Flip X
-yf=Flip Y
-zf=Flip Z
+xf=X flippen
+yf=Y flippen
+zf=Z flippen
 r=Alle LEDs umkehren
 
 baud=Baud
@@ -62,6 +63,6 @@ comport=Serialport
 open_serial=Öffnen
 close_serial=Schließen
 delay=Verzögerung aktualisieren (ms)
+delay_ms=20
 refresh=Aktualisieren
 anim_loop=Als Schleife animieren
-
