--- a/src/main/resources/aguegu/dotmatrix/DotMatrixGUI_zh.properties
+++ b/src/main/resources/aguegu/dotmatrix/DotMatrixGUI_zh.properties
@@ -17,6 +17,7 @@ delete=\u5220\u9664
 language=\u8BED\u8A00
 english=English
 chinese=Chinese
+german=German
 
 mode=\u5750\u6807\u7CFB
 brightness=\u4EAE\u5EA6
@@ -62,5 +63,6 @@ comport=Serial port
 open_serial=Open
 close_serial=Close
 delay=Update delay(ms)
+delay_ms=20
 refresh=Refresh
 anim_loop=Loop animation
